services/verifiable-data-service/k8s/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verifiable-data-service
  labels:
    app: verifiable-data-service
spec:
  selector:
    matchLabels:
      app: verifiable-data-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: verifiable-data-service
      labels:
        app: verifiable-data-service
    spec:
      volumes:
        - name: key
          secret:
            secretName: verifiable-data-service-key
      containers:
        - name: verifiable-data-service
          image: identinet/check-verifiable-data-service
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: key
              mountPath: /secret/key.jwk
              subPath: key.jwk
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: http
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
