services/verifiable-data-service/k8s/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: verifiable-data-service
spec:
  selector:
    app: verifiable-data-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
